# xcfun_rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
.cargo/: config.toml
crates/xcfun-ad/: Cargo.toml
crates/xcfun-ad/benches/: compose_bench.rs  mul_bench.rs
crates/xcfun-ad/src/: compose.rs  ctaylor.rs  for_tests.rs  index.rs  lib.rs  math.rs  num.rs  tfuns.rs  tmath.rs  valid_n.rs
crates/xcfun-ad/src/ctaylor_rec/: compose.rs  mod.rs  mul.rs  multo.rs
crates/xcfun-ad/src/expand/: asinh.rs  atan.rs  br_inverse.rs  cbrt.rs  erf.rs  exp.rs  expm1.rs  gauss.rs  inv.rs  log.rs  mod.rs  pow.rs  sqrt.rs
crates/xcfun-ad/src/for_tests/: cpu_client.rs  mod.rs  raw_eval_scalar.rs
crates/xcfun-ad/tests/: ctaylor_unit.rs  cubecl_spike.rs  erf_taylor_chain.rs  expand_primary.rs  expand_trans.rs  golden_br_inverse.rs  golden_compose_n4.rs  golden_composed.rs  golden_expand.rs  golden_mul.rs  golden_multo_n4.rs  math_unit.rs  proptest_algebra.rs  test_ctaylor_n6.rs  tfuns_unit.rs
crates/xcfun-ad/tests/fixtures/: composed.bincode  erf_taylor_chain.jsonl  expand.bincode  fixtures.json  mul.bincode
crates/xcfun-capi/: Cargo.toml  cbindgen.toml
crates/xcfun-capi/examples/: gen_expected.rs
crates/xcfun-capi/include/: xcfun.h  xcfun.h.sha256
crates/xcfun-capi/src/: c_entry.rs  lib.rs  types.rs
crates/xcfun-capi/tests/: api_smoke.rs  c_abi.c  c_abi.rs  headers_match.rs
crates/xcfun-capi/tests/fixtures/: expected.json
crates/xcfun-eval/: Cargo.toml
crates/xcfun-eval/src/: density_vars.rs  dispatch.rs  for_tests.rs  functional.rs  lib.rs
crates/xcfun-eval/src/density_vars/: build.rs  regularize.rs
crates/xcfun-eval/src/functionals/: contracted.rs  mod.rs  potential.rs
crates/xcfun-eval/tests/: alias_canary.rs  contracted_cross_mode.rs  cubecl_densvars_spike.rs  pack_ctaylor_inputs.rs  potential_gga.rs  potential_lda.rs  potential_parity.rs  regularize_2nd_taylor.rs  regularize_invariant.rs  regularize_mgga_invariant.rs  self_tests.rs  tpss_tau_clamp.rs
crates/xcfun-eval/tests/data/: potential_reference_100.json
crates/xcfun-gpu/: Cargo.toml  README.md
crates/xcfun-gpu/src/: auto_backend.rs  backend.rs  batch.rs  error_routing.rs  lib.rs  pool.rs
crates/xcfun-gpu/src/runtime/: cpu.rs  cuda.rs  hip.rs  mod.rs  wgpu.rs
crates/xcfun-gpu/tests/: auto_backend_priority.rs  batch_api_shape.rs  batch_kernel_smoke.rs  buffer_pool_growth.rs  erf_fallback.rs  settings_generation_bumps.rs  wgpu_no_f64.rs
crates/xcfun-kernels/: Cargo.toml
crates/xcfun-kernels/src/: dispatch.rs  lib.rs
crates/xcfun-kernels/src/density_vars/: build.rs  regularize.rs
crates/xcfun-kernels/tests/: d19_apbec.rs  d19_b97_1c.rs  d19_b97_1x.rs  d19_b97_2c.rs  d19_b97_2x.rs  d19_b97c.rs  d19_b97x.rs  d19_beckesrx.rs  d19_generate_baselines.rs  d19_lypc.rs  d19_m05c.rs  d19_m05x.rs  d19_m05x2c.rs  d19_m06c.rs  d19_m06hfc.rs  d19_m06hfx.rs  d19_m06lc.rs  d19_m06lx.rs  d19_m06x.rs  d19_m06x2c.rs  d19_n3_regen_fixtures.rs  d19_optx.rs  d19_p86c.rs  d19_p86corrc.rs  d19_pbec.rs  d19_pbeintc.rs  d19_pw91c.rs  d19_pw91k.rs  d19_pw92c.rs  d19_spbec.rs  d19_vwn_pbec.rs
crates/xcfun-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/xcfun-py/examples/: gen_py_fixtures.rs
crates/xcfun-py/src/: errors.rs  functional.rs  lib.rs  numpy_io.rs
crates/xcfun-py/tests/: conftest.py  test_eval_vec_zero_copy.py  test_functional.py  test_parity.py  test_smoke.py  test_xcfun_error.py
crates/xcfun-rs/: Cargo.toml
crates/xcfun-rs/assets/: authors.txt  splash.txt
crates/xcfun-rs/src/: free_fns.rs  functional.rs  lib.rs
crates/xcfun-rs/tests/: eval_vec_threshold.rs  free_fns.rs  lda_gga_alias_dispatch.rs  no_leak_on_set.rs  send_sync.rs  zero_alloc.rs  zero_alloc_strict.rs
validation/: Cargo.toml  build.rs  c_stubs.cpp  c_stubs.cpp.sha256  report-summary.json  report.html
validation/fixtures/d19_n1/: apbec_baseline.jsonl  b97_1c_baseline.jsonl  b97_2c_baseline.jsonl  b97c_baseline.jsonl  beckesrx_baseline.jsonl  p86c_baseline.jsonl  p86corrc_baseline.jsonl  pbeintc_baseline.jsonl  pw91c_baseline.jsonl  pw91k_baseline.jsonl  spbec_baseline.jsonl
validation/fixtures/d19_n3/: b97_1x_baseline.jsonl  b97_2x_baseline.jsonl  b97x_baseline.jsonl  lypc_baseline.jsonl  m05c_baseline.jsonl  m05x2c_baseline.jsonl  m05x_baseline.jsonl  m06c_baseline.jsonl  m06hfc_baseline.jsonl  m06hfx_baseline.jsonl  m06lc_baseline.jsonl  m06lx_baseline.jsonl  m06x2c_baseline.jsonl  m06x_baseline.jsonl  optx_baseline.jsonl  pbec_baseline.jsonl  pw92c_baseline.jsonl  vwn_pbec_baseline.jsonl
validation/fixtures/mpmath/: blocx.jsonl  blocx.jsonl.sha256  brc.jsonl  brc.jsonl.sha256  brx.jsonl  brx.jsonl.sha256  brxc.jsonl  brxc.jsonl.sha256  csc.jsonl  csc.jsonl.sha256  ldaerfc.jsonl  ldaerfc.jsonl.sha256  ldaerfc_jt.jsonl  ldaerfc_jt.jsonl.sha256  ldaerfx.jsonl  ldaerfx.jsonl.sha256  pbelocc.jsonl  pbelocc.jsonl.sha256  r2scanc.jsonl  r2scanc.jsonl.sha256  r2scanx.jsonl  r2scanx.jsonl.sha256  r4scanc.jsonl  r4scanc.jsonl.sha256  r4scanx.jsonl  r4scanx.jsonl.sha256  revtpssc.jsonl  revtpssc.jsonl.sha256  rppscanc.jsonl  rppscanc.jsonl.sha256  rppscanx.jsonl  rppscanx.jsonl.sha256  rscanc.jsonl  rscanc.jsonl.sha256  rscanx.jsonl  rscanx.jsonl.sha256  scanc.jsonl  scanc.jsonl.sha256  scanx.jsonl  scanx.jsonl.sha256  (+12 more)
validation/src/: driver.rs  ffi.rs  fixtures.rs  lib.rs  main.rs  report.rs
validation/tests/: ffi_smoke.rs  parallelism_parity.rs
xtask/: Cargo.toml
xtask/assets/regen_ad_fixtures/: driver.cpp
xtask/assets/regen_registry/: extractor.cpp
xtask/mpmath_eval/: README.md  __init__.py  __main__.py  _ldaerf_eps.py  _pw92eps.py  _scan_like.py  _tpss_eps.py  ad_chain.py  densvars.py  evaluator.py
xtask/mpmath_eval/functionals/: __init__.py  blocx.py  brc.py  brx.py  brxc.py  csc.py  ldaerfc.py  ldaerfc_jt.py  ldaerfx.py  pbelocc.py  r2scanc.py  r2scanx.py  r4scanc.py  r4scanx.py  revtpssc.py  rppscanc.py  rppscanx.py  rscanc.py  rscanx.py  scanc.py  scanx.py  tpssc.py  tpsslocc.py  tw.py  vwk.py  zvpbeintc.py  zvpbesolc.py
xtask/src/: fixtures.rs  main.rs
xtask/tests/: release_publish.rs
(+623 files in other folders)
