[workspace]
# Phase 5 Plan 05-00: xcfun-ffi → xcfun-capi rename (D-01); xcfun-functionals
# deletion (D-04); xcfun-rs facade promoted to member (D-02). Phase 2:
# xcfun-core re-included (Plan 02-01 Wave-0f). xcfun-eval added in
# Plan 02-03 Wave-1B-1; validation added in Plan 02-06 Wave-2-1. Other crates
# remain excluded (Phase 6+/7+).
members = [
    "crates/xcfun-ad",
    "crates/xcfun-core",
    # Phase 6 Plan 06-01 (D-08): xcfun-kernels owns the per-functional `#[cube]`
    # bodies + DensVarsDev + dispatch_kernel; listed before xcfun-eval (its
    # only library-graph dependent today).
    "crates/xcfun-kernels",
    "crates/xcfun-eval",
    # Phase 6 Plan 06-02a: xcfun-gpu promoted from exclude. Houses the
    # Backend enum, Batch<'fun, R: cubecl::Runtime> skeleton, generation-
    # counter buffer pool, auto_backend() priority chain, and ERF auto-
    # fallback routing. cubecl-hip / cubecl-cuda / cubecl-wgpu wired in
    # Plans 06-03 / 06-04.
    "crates/xcfun-gpu",
    "crates/xcfun-rs",
    "crates/xcfun-capi",
    # Phase 7 Plan 07-01 (D-01): xcfun-py promoted from exclude. Renamed
    # from the prior xcfun-python stub via `git mv` to preserve history.
    # Houses the PyO3 0.28 + rust-numpy 0.28 Python bindings; full
    # #[pymodule] skeleton lands in Plan 07-02. CPU-only by default per D-03.
    "crates/xcfun-py",
    "xtask",
    "validation",
]
exclude = []
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# Library-graph deps (allowed in any xcfun-* crate).
thiserror = "=2.0.18"
bitflags = "=2.11.1"
approx = "=0.5.1"
tracing = { version = "=0.1.44", default-features = false }
tracing-subscriber = { version = "=0.3.23", features = ["fmt"] }

# cubecl pivot — all five must move in lockstep (CLAUDE.md risk note).
# Phase 6 Plan 06-02a adds cubecl-hip / cubecl-cuda / cubecl-wgpu workspace
# pins; Plans 06-03 / 06-04 pull them in via xcfun-gpu feature flags.
cubecl = "=0.10.0-pre.3"
cubecl-cpu = "=0.10.0-pre.3"
cubecl-hip = "=0.10.0-pre.3"
cubecl-cuda = "=0.10.0-pre.3"
cubecl-wgpu = "=0.10.0-pre.3"

# App-boundary deps (xtask / benches / examples / dev-deps only).
anyhow = "1.0.102"

# Dev / test / bench / fixture.
proptest = "=1.11.0"
rstest = "=0.26.1"
rand_xoshiro = "=0.8.0"
criterion = { version = "=0.8.2", default-features = false, features = ["html_reports"] }
bincode = "1.3"
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0.149"

# xtask build helper.
cc = { version = "^1.2.60", features = ["parallel"] }
