[package]
name = "validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Tier-2 parity harness — Rust cubecl-cpu vs C++ xcfun"

[[bin]]
name = "validation"
path = "src/main.rs"

[lib]
name = "validation"
path = "src/lib.rs"

[dependencies]
xcfun-eval = { path = "../crates/xcfun-eval", features = ["testing"] }
xcfun-core = { path = "../crates/xcfun-core" }
anyhow = { workspace = true }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand_xoshiro = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1.10"

[build-dependencies]
cc = { workspace = true }
