[package]
name = "validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Tier-2 parity harness — Rust cubecl-cpu vs C++ xcfun"

[[bin]]
name = "validation"
path = "src/main.rs"

[lib]
name = "validation"
path = "src/lib.rs"

[dependencies]
xcfun-eval = { path = "../crates/xcfun-eval", features = ["testing"] }
xcfun-core = { path = "../crates/xcfun-core" }
# Phase 6 Plan 06-01 (D-08): kernel bodies + dispatch_kernel split out into
# xcfun-kernels. validation does not yet import from this crate (the
# tier-2 harness still goes through Functional::eval), but the explicit
# dep declaration future-proofs Plan 06-N1/N2 which will use
# xcfun_kernels::dispatch::supports + xcfun_kernels::dispatch::run_launch
# directly when wiring the mpmath ground-truth path and the per-functional
# bisection sweep.
xcfun-kernels = { path = "../crates/xcfun-kernels" }
anyhow = { workspace = true }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand_xoshiro = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1.10"

[build-dependencies]
cc = { workspace = true }

# Quick task 260430-4x7 — `tempfile` is a `[dev-dependencies]` only;
# does not enter the production validation lib/binary. App-boundary
# scope per CLAUDE.md (validation crate is the dev-tooling app boundary).
[dev-dependencies]
tempfile = "3"
