[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Internal build/fixture automation — not published"

[[bin]]
name = "xtask"
path = "src/main.rs"

[[bin]]
name = "regen-ad-fixtures"
path = "src/bin/regen_ad_fixtures.rs"

[dependencies]
anyhow = { workspace = true }
cc = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Plan 01-05 adds local (not-yet-in-workspace) deps needed by the
# regen-ad-fixtures binary: SHA-256 hashing of xcfun-master header sources for
# drift detection, timestamp for the fixture manifest. These live at the xtask
# (app-boundary) layer only — no library crate depends on them.
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
