[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Internal build/fixture automation — not published"

[[bin]]
name = "xtask"
path = "src/main.rs"

[[bin]]
name = "regen-ad-fixtures"
path = "src/bin/regen_ad_fixtures.rs"

[[bin]]
name = "check-no-fma"
path = "src/bin/check_no_fma.rs"

[[bin]]
name = "regen-registry"
path = "src/bin/regen_registry.rs"

[[bin]]
name = "check-no-mul-add"
path = "src/bin/check_no_mul_add.rs"

[[bin]]
name = "check-no-anyhow"
path = "src/bin/check_no_anyhow.rs"

[[bin]]
name = "check-boundaries"
path = "src/bin/check_boundaries.rs"

[[bin]]
name = "check-cubecl-pin"
path = "src/bin/check_cubecl_pin.rs"

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[[bin]]
name = "gen-potential-fixtures"
path = "src/bin/gen_potential_fixtures.rs"
required-features = ["gen-potential-fixtures"]

[[bin]]
name = "regen-capi-header"
path = "src/bin/regen_capi_header.rs"

[features]
default = []
# Phase 3 plan 03-05 (B5): the gen-potential-fixtures bin pulls in
# validation/'s CppXcfun (which compiles all of xcfun-master's C++
# tree). Gated behind a feature flag so the standard xtask build
# (fmt/clippy/check-no-anyhow/regen-registry) stays lean.
gen-potential-fixtures = ["dep:validation"]

[dependencies]
anyhow = { workspace = true }
cc = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Phase 3 plan 03-05 (B5): optional dep providing CppXcfun + the
# pre-cc-compiled xcfun-master tree for offline fixture generation.
validation = { path = "../validation", optional = true }
rand_xoshiro = { workspace = true, optional = false }
# Plan 01-05 adds local (not-yet-in-workspace) deps needed by the
# regen-ad-fixtures binary: SHA-256 hashing of xcfun-master header sources for
# drift detection, timestamp for the fixture manifest. These live at the xtask
# (app-boundary) layer only — no library crate depends on them.
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
# Plan 01-07 Task 3 — `check-no-fma` xtask demangles asm symbol labels to
# detect FMA mnemonics in `ctaylor_mul*` function bodies.
rustc-demangle = "0.1"
# Plan 02-02 Wave-1A — walking crate source trees for mul_add detection +
# Cargo.toml parsing for the anyhow boundary gate + tempdir for regen-registry
# --check mode.
walkdir = "2"
toml = "0.8"
tempfile = "3"
# Plan 05-03 D-09: cbindgen header regeneration via `regen-capi-header`
# binary. Hard-pinned per CLAUDE.md technology stack.
cbindgen = "=0.29.2"
