[package]
name = "xcfun-ad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Automatic differentiation engine for xcfun_rs (cubecl-native CTaylor)"
license = "MPL-2.0"

[features]
default = ["cpu"]
cpu = ["dep:cubecl-cpu"]   # D-26
testing = []               # D-22 — gates `pub mod for_tests`

[dependencies]
cubecl = { workspace = true }
cubecl-cpu = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
rand_xoshiro = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "mul_bench"
harness = false

[[bench]]
name = "compose_bench"
harness = false
