[package]
name = "xcfun-capi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "C ABI drop-in replacement for xcfun-master/api/xcfun.h"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
xcfun-rs   = { path = "../xcfun-rs" }
xcfun-core = { path = "../xcfun-core" }

[dev-dependencies]
# Plan 05-04: tests/c_abi.rs uses cc to compile + link tests/c_abi.c
# against libxcfun_capi.a; examples/gen_expected.rs writes the
# tests/fixtures/expected.json reference fixtures via serde_json.
cc         = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[[example]]
name = "gen_expected"
path = "examples/gen_expected.rs"
required-features = []
