[package]
name = "xcfun-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "cubecl launcher + functional bodies for xcfun_rs"
license = "MPL-2.0"

[features]
default = ["cpu"]
cpu = ["dep:cubecl-cpu"]
testing = []

[dependencies]
xcfun-core = { path = "../xcfun-core" }
xcfun-ad = { path = "../xcfun-ad" }
# Phase 6 Plan 06-01 (D-08): per-functional #[cube] kernel bodies +
# DensVarsDev<F> + dispatch_kernel live in xcfun-kernels. xcfun-eval is the
# per-point cubecl-cpu validation substrate that consumes them.
xcfun-kernels = { path = "../xcfun-kernels" }
cubecl = { workspace = true }
cubecl-cpu = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
xcfun-ad = { path = "../xcfun-ad", features = ["testing"] }
approx = { workspace = true }
rstest = { workspace = true }
# Phase 3 plan 03-05 — `tests/potential_parity.rs` loads the
# offline-generated potential_reference_100.json fixture.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
