[package]
name = "xcfun-kernels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Per-functional #[cube] kernel bodies + DensVarsDev + dispatch table for xcfun_rs (runtime-agnostic)"
license = "MPL-2.0"

# Phase 6 D-08: kernel bodies live here, never instantiate a runtime.
# Runtime concerns are owned by xcfun-eval (cubecl-cpu validation substrate)
# and xcfun-gpu (cubecl-hip / cubecl-cuda / cubecl-wgpu). This crate's
# [dependencies] block deliberately omits all cubecl-runtime crates — the
# `testing` feature in xcfun-eval pulls cubecl-cpu in transitively for any
# tier-1 self-tests that ever land here.

[features]
default = []
testing = []

[dependencies]
xcfun-core = { path = "../xcfun-core" }
xcfun-ad   = { path = "../xcfun-ad" }
cubecl     = { workspace = true }
thiserror  = { workspace = true }

# Phase 6 Plan 06-N3 (W-9 / I-3 Option B): per-functional D-19 fixtures +
# unit tests live in `crates/xcfun-kernels/tests/d19_<name>.rs`. Each test
# loads `validation/fixtures/d19_n3/<name>_baseline.jsonl`, builds a
# `Functional` (in xcfun-eval) at order 3 over the curated density strata,
# and asserts strict 1e-13 vs the committed snapshot. The tests are
# pure-verification regression contracts (I-3 Option B) — they do not
# exercise any code path inside this crate directly, but they exercise the
# `xcfun_kernels` public surface transitively via the
# `xcfun_eval::Functional::eval` → `dispatch_kernel` chain. Dev-deps are
# crate-graph local; library deps above are unchanged.
[dev-dependencies]
xcfun-eval = { path = "../xcfun-eval", features = ["testing"] }
approx     = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
